Fixed the bugs of Images Not loading
 made Changes templates and model and settings,py and main urls.py file to
 fix the problem of image loading

--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,7 +2,8 @@
 <li>
   <article class="post">
     <a href="{% url 'post_detail' po.slug %}">
-      <img src="{% static 'blog/images/'|add:po.image_name %}" alt="{{ po.title }}">
+      {% comment %} <img src="{% static 'blog/images/'|add:po.image_name %}" alt="{{ po.title }}"> {% endcomment %}
+      <img src="{{ po.image_name.url }}" alt="{{ po.title }}">
       <div class="post_content">
         <h3>{{ po.title }}</h3>
         <p>
